updated charsset UTF-8, implemented product.jsp, search.jsp

--- a/WEBProject/WebContent/registration.html
+++ b/WEBProject/WebContent/registration.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Registrazione</title>
 
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
@@ -93,7 +93,7 @@
 	<!-- Footer -->
 	<hr>
 	<footer class="page-footer font-small blue pt-4">
-	  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+	  <div class="footer-copyright text-center py-3">Â© 2020 Copyright:
 	    <a href="https://mdbootstrap.com/education/bootstrap/"> progettoSIW.it</a>
 	  </div>
 	</footer>
